--- a/vue/src/i18n/locales/en-US/services.json
+++ b/vue/src/i18n/locales/en-US/services.json
@@ -50,6 +50,7 @@
 	"additional_services": "Additional Services",
 	"prepaid_amount": "Prepaid Amount",
 	"car_insurance": "Car Insurance",
+	"medical_insurance": "Medical Insurance",
 	"valid_from": "Valid From",
 	"number_plate": "Number Plate",
 	"vehicle": "Vehicle",
