--- a/vue/src/i18n/locales/da-DK/services.json
+++ b/vue/src/i18n/locales/da-DK/services.json
@@ -4,13 +4,14 @@
 	"first_name": "Fornavn",
 	"last_name": "Efternavn",
 	"address": "Adresse",
+  "geo_location": "Placering",
 	"postal_code": "Postnummer",
 	"country": "Land",
 	"customer_number": "Kundenummer",
-	"dob": "Fødselsdato",
+	"date_of_birth": "Fødselsdato",
 	"household_members": "Antal personer i husstanden",
-  "household_members_adults": "Antal voksne i husstanden",
-  "household_members_children": "Antal børn i husstanden",
+  "number_of_adults_in_household": "Antal voksne i husstanden",
+  "number_of_children_in_household": "Antal børn i husstanden",
 	"phone": "Telefon",
 	"mobile": "Mobiltelefon",
 	"interaction_data": "Interaktionsdata",
@@ -53,6 +54,7 @@
 	"prepaid_amount": "Forudbetalt beløb",
 	"car_insurance": "Bilforsikring",
   "medical_insurance": "Sygeforsikring",
+  "pension": "Pension",
 	"valid_from": "Gyldig fra",
 	"number_plate": "Nummerplade",
 	"vehicle": "Køretøj",
