--- a/vue/src/i18n/locales/en-US/services.json
+++ b/vue/src/i18n/locales/en-US/services.json
@@ -4,13 +4,14 @@
 	"first_name": "First Name",
 	"last_name": "Last Name",
 	"address": "Address",
+  "geo_location": "Location",
 	"postal_code": "Postal Code",
 	"country": "Country",
 	"customer_number": "Customer Number",
-	"dob": "Date of Birth",
+	"date_of_birth": "Date of Birth",
 	"household_members": "Household Members",
-  "household_members_adults": "Adults in Household",
-  "household_members_children": "Children in Household",
+  "number_of_adults_in_household": "Adults in Household",
+  "number_of_children_in_household": "Children in Household",
 	"phone": "Phone",
 	"mobile": "Mobile",
 	"interaction_data": "Interaction Data",
@@ -53,6 +54,7 @@
 	"prepaid_amount": "Prepaid Amount",
 	"car_insurance": "Car Insurance",
 	"medical_insurance": "Medical Insurance",
+  "pension": "Pension",
 	"valid_from": "Valid From",
 	"number_plate": "Number Plate",
 	"vehicle": "Vehicle",
