Filtering on service types

--- a/vue/src/i18n/locales/da-DK/offers.json
+++ b/vue/src/i18n/locales/da-DK/offers.json
@@ -26,5 +26,5 @@
   "fire_protection": "Brandbeskyttelse",
   "water_damage_protection": "Vandskade beskyttelse",
   "storm_damage_protection": "Stormskade beskyttelse",
-  "debit_amount": "Debitbeløb"
+  "total_due": "Debitbeløb"
   }  
