--- a/vue/src/i18n/locales/da-DK/services.json
+++ b/vue/src/i18n/locales/da-DK/services.json
@@ -15,7 +15,7 @@
 	"phone": "Telefon",
 	"mobile": "Mobiltelefon",
 	"interaction_data": "Interaktionsdata",
-	"invoice_debit_amount": "Faktureringsdebitbeløb",
+	"invoice_total_due": "Faktureringsdebitbeløb",
 	"invoice_debit_date": "Faktureringsdebitdato",
 	"phone_number": "Telefonnummer",
 	"invoice_period": "Faktureringsperiode",
@@ -43,7 +43,8 @@
 	"mortgage_contribution": "Boliglån bidrag",
 	"interest_paid": "Renter betalt",
 	"installment_paid": "Afdrag betalt",
-	"debit_amount": "Debiteret beløb",
+	"total_due": "Debiteret beløb",
+  "total_paid": "Betalt beløb",
 	"debit_date": "Debiteringsdato",
 	"terms_remaining": "Resterende løbetid",
 	"energy": "Energi",
@@ -67,13 +68,71 @@
 	"add_ons": "Tilvalg",
 	"alarm_discount": "Alarmrabat",
 	"broadband": "Bredbånd",
+  "service_period": "Serviceperiode",
+  "service_provider_name": "Udbyder",
 
+  "energy_usage_total": "Samlet energiforbrug",
+  "current_kwh_rate": "Nuværende KWH-sats",
+  "taxes_fees": "Afgifter og gebyrer",
+  "discounts": "Rabatter",
+  "green_energy": "Grøn energi",
+  "contract_start": "Kontraktstart",
+  
   "saving_money_importance": "Vigtighed af at spare penge",
   "quality_over_cost": "Kvalitet over pris?",
-  "eco_friendly_priority": "Miljøvenlighed prioritet",
+  "eco_friendliness_priority": "Miljøvenlighed prioritet",
   "customer_service_value": "Værdi af kundeservice",
   "need_for_plan_flexibility": "Behov for plan fleksibilitet",
   "latest_tech_importance": "Vigtighed af nyeste teknologi",
   "bundling_services_preference": "Pakkeløsninger præference",
-  "fixed_rate_preference": "Fast rente præference"
+  "fixed_rate_preference": "Fast rente præference",
+
+  "Unknown": "Ukendt",
+  "Mobile": "Mobil",
+  "Broadband": "Bredbånd",
+  "Electricity": "El",
+  "Mortgage": "Boliglån",
+  "HomeInsurance": "Husforsikring",
+  "CarInsurance": "Bilforsikring",
+  "MedicalInsurance": "Sygeforsikring",
+  "Pension": "Pension",
+  "mobile_number": "Mobilnummer",
+  "call_minutes": "Opkaldsminutter",
+  "internet_speed": "Internethastighed",
+  "data_limit": "Datagrænse",
+  "extra_services": "Ekstra ydelser",
+  "device_payment": "Enhedsbetaling",
+  "accessory_payment": "Tilbehørsbetaling",
+  "loan_id": "Låne-ID",
+  "due_date": "Forfaldsdato",
+  "balance": "Balance",
+  "term": "Løbetid",
+  "type": "Type",
+  "escrow": "Depot",
+  "contract_start_date": "Kontrakt startdato",
+  "payment_history": "Betalingshistorik",
+  "contact_info": "Kontaktinformation",
+  "coverage_type": "Dækningstype",
+  "monthly_premium": "Månedlig præmie",
+  "policy_start_date": "Policestartdato",
+  "policy_end_date": "Police slutdato",
+  "deductible": "Selvrisiko",
+  "covered_vehicles": "Dækkede køretøjer",
+  "drivers_listed": "Førere angivet",
+  "contact_for_claims": "Kontakt for skader",
+  "premium_due": "Præmie forfald",
+  "policy_number": "Policenummer",
+  "insurance_type": "Forsikringstype",
+  "covered_perils": "Dækkede farer",
+  "payment_date": "Betalingsdato",
+  "next_payment_date": "Næste betalingsdato",
+  "coverage_start_date": "Dækning startdato",
+  "renewal_date": "Fornyelsesdato",
+  "coverage_amount": "Dækningsbeløb",
+  "bill_id": "Faktura-ID",
+  "broadband_speed": "Bredbåndshastighed",
+  "data_cap": "Datagrænse",
+  "monthly_charge": "Månedlig afgift",
+  "equipment_rental": "Udstyrsleje",
+  "additional_fees": "Ekstra gebyrer"
 }
