--- a/vue/src/i18n/locales/en-US/services.json
+++ b/vue/src/i18n/locales/en-US/services.json
@@ -4,18 +4,18 @@
 	"first_name": "First Name",
 	"last_name": "Last Name",
 	"address": "Address",
-  "geo_location": "Location",
+	"geo_location": "Location",
 	"postal_code": "Postal Code",
 	"country": "Country",
 	"customer_number": "Customer Number",
 	"date_of_birth": "Date of Birth",
 	"household_members": "Household Members",
-  "number_of_adults_in_household": "Adults in Household",
-  "number_of_children_in_household": "Children in Household",
+	"number_of_adults_in_household": "Adults in Household",
+	"number_of_children_in_household": "Children in Household",
 	"phone": "Phone",
 	"mobile": "Mobile",
 	"interaction_data": "Interaction Data",
-	"invoice_debit_amount": "Invoice Debit Amount",
+	"invoice_total_due": "Invoice Debit Amount",
 	"invoice_debit_date": "Invoice Debit Date",
 	"phone_number": "Phone Number",
 	"invoice_period": "Invoice Period",
@@ -43,7 +43,8 @@
 	"mortgage_contribution": "Mortgage Contribution",
 	"interest_paid": "Interest Paid",
 	"installment_paid": "Installment Paid",
-	"debit_amount": "Debit Amount",
+	"total_due": "Debit Amount",
+	"total_paid": "Total Paid",
 	"debit_date": "Debit Date",
 	"terms_remaining": "Terms Remaining",
 	"energy": "Energy",
@@ -54,7 +55,7 @@
 	"prepaid_amount": "Prepaid Amount",
 	"car_insurance": "Car Insurance",
 	"medical_insurance": "Medical Insurance",
-  "pension": "Pension",
+	"pension": "Pension",
 	"valid_from": "Valid From",
 	"number_plate": "Number Plate",
 	"vehicle": "Vehicle",
@@ -67,13 +68,68 @@
 	"add_ons": "Add-Ons",
 	"alarm_discount": "Alarm Discount",
 	"broadband": "Broadband",
-
-  "saving_money_importance": "Saving money importance",
-  "quality_over_cost": "Quality over cost?",
-  "eco_friendly_priority": "Eco-friendliness priority",
-  "customer_service_value": "Customer service value",
-  "need_for_plan_flexibility": "Need for plan flexibility",
-  "latest_tech_importance": "Latest tech importance",
-  "bundling_services_preference": "Bundling services preference",
-  "fixed_rate_preference": "Fixed rate preference"
+	"service_period": "Service Period",
+	"service_provider_name": "Service Provider Name",
+	"energy_usage_total": "Energy Usage Total",
+	"current_kwh_rate": "Current KWH Rate",
+	"taxes_fees": "Taxes and Fees",
+	"discounts": "Discounts",
+	"green_energy": "Green Energy",
+	"contract_start": "Contract Start",
+	"saving_money_importance": "Saving money importance",
+	"quality_over_cost": "Quality over cost?",
+	"eco_friendliness_priority": "Eco-friendliness priority",
+	"customer_service_value": "Customer service value",
+	"need_for_plan_flexibility": "Need for plan flexibility",
+	"latest_tech_importance": "Latest tech importance",
+	"bundling_services_preference": "Bundling services preference",
+	"fixed_rate_preference": "Fixed rate preference",
+	"Unknown": "Unknown",
+	"Mobile": "Mobile",
+	"Broadband": "Broadband",
+	"Electricity": "Electricity",
+	"Mortgage": "Mortgage",
+	"HomeInsurance": "Home Insurance",
+	"CarInsurance": "Car Insurance",
+	"MedicalInsurance": "Medical Insurance",
+	"Pension": "Pension",
+  "mobile_number": "Mobile Number",
+  "call_minutes": "Call Minutes",
+  "internet_speed": "Internet Speed",
+  "data_limit": "Data Limit",
+  "extra_services": "Extra Services",
+  "device_payment": "Device Payment",
+  "accessory_payment": "Accessory Payment",
+  "loan_id": "Loan ID",
+  "due_date": "Due Date",
+  "balance": "Balance",
+  "term": "Term",
+  "type": "Type",
+  "escrow": "Escrow",
+  "contract_start_date": "Contract Start Date",
+  "payment_history": "Payment History",
+  "contact_info": "Contact Info",
+  "coverage_type": "Coverage Type",
+  "monthly_premium": "Monthly Premium",
+  "policy_start_date": "Policy Start Date",
+  "policy_end_date": "Policy End Date",
+  "deductible": "Deductible",
+  "covered_vehicles": "Covered Vehicles",
+  "drivers_listed": "Drivers Listed",
+  "contact_for_claims": "Contact for Claims",
+  "premium_due": "Premium Due",
+  "policy_number": "Policy Number",
+  "insurance_type": "Insurance Type",
+  "covered_perils": "Covered Perils",
+  "payment_date": "Payment Date",
+  "next_payment_date": "Next Payment Date",
+  "coverage_start_date": "Coverage Start Date",
+  "renewal_date": "Renewal Date",
+  "coverage_amount": "Coverage Amount",
+  "bill_id": "Bill ID",
+  "broadband_speed": "Broadband Speed",
+  "data_cap": "Data Cap",
+  "monthly_charge": "Monthly Charge",
+  "equipment_rental": "Equipment Rental",
+  "additional_fees": "Additional Fees"
 }
