--- a/vue/src/i18n/locales/da-DK/services.json
+++ b/vue/src/i18n/locales/da-DK/services.json
@@ -87,6 +87,7 @@
   "bundling_services_preference": "Pakkeløsninger præference",
   "fixed_rate_preference": "Fast rente præference",
 
+  "General": "Generelt",
   "Unknown": "Ukendt",
   "Mobile": "Mobil",
   "Broadband": "Bredbånd",
