serviceTypeCombo for offers

--- a/vue/src/i18n/locales/da-DK/services.json
+++ b/vue/src/i18n/locales/da-DK/services.json
@@ -91,7 +91,7 @@
   "Unknown": "Ukendt",
   "Mobile": "Mobil",
   "Broadband": "Bredbånd",
-  "Electricity": "El",
+  "Electricity": "Energi",
   "Mortgage": "Boliglån",
   "HomeInsurance": "Husforsikring",
   "CarInsurance": "Bilforsikring",
