--- a/vue/src/i18n/locales/en-US/services.json
+++ b/vue/src/i18n/locales/en-US/services.json
@@ -89,7 +89,7 @@
 	"Unknown": "Unknown",
 	"Mobile": "Mobile",
 	"Broadband": "Broadband",
-	"Electricity": "Electricity",
+	"Electricity": "Energy",
 	"Mortgage": "Mortgage",
 	"HomeInsurance": "Home Insurance",
 	"CarInsurance": "Car Insurance",
