mandatory commitment period

--- a/vue/src/i18n/locales/da-DK/services.json
+++ b/vue/src/i18n/locales/da-DK/services.json
@@ -86,7 +86,8 @@
   "latest_tech_importance": "Vigtighed af nyeste teknologi",
   "bundling_services_preference": "Pakkeløsninger præference",
   "fixed_rate_preference": "Fast rente præference",
-
+  "commitment_period:": "Forpligtelsesperiode",
+  
   "General": "Generelt",
   "Unknown": "Ukendt",
   "Mobile": "Mobil",
