--- a/vue/src/i18n/locales/en-US/services.json
+++ b/vue/src/i18n/locales/en-US/services.json
@@ -43,7 +43,7 @@
 	"mortgage_contribution": "Mortgage Contribution",
 	"interest_paid": "Interest Paid",
 	"installment_paid": "Installment Paid",
-	"total_due": "Debit Amount",
+	"total_due": "Total Due",
 	"total_paid": "Total Paid",
 	"debit_date": "Debit Date",
 	"terms_remaining": "Terms Remaining",
